apps/blockscout/kustomize/overlays/aws/goerli-nightly/resource_override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blockscout
spec:
  template:
    spec:
      containers:
        - name: app-blockscout
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
