apps/blockscout/kustomize/overlays/aws/goerli-nightly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockscout-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  tls:
    - hosts:
        - explorer.titan-goerli-nightly.tokamak.network
  rules:
    - host: explorer.titan-goerli-nightly.tokamak.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout-svc
                port:
                  number: 80
